Updated primary CSS document
Simplified CSS

--- a/css/LEXstyle.css
+++ b/css/LEXstyle.css
@@ -4,6 +4,7 @@ body{
     margin:0;
     width:1078px;
     height:1918px;
+    overflow:hidden;
     }
 
 
@@ -21,17 +22,11 @@ div.button1     {
         top: 324px;
         z-index:1;
         background-color:none;
-        opacity: 0.5;
         text-align:center;
         vertical-align:middle;
         padding-top:0px;
-        transition:opacity .5s;
-        -moz-transition:opacity .5s; /* Firefox 4 */
-        -webkit-transition:opacity .5s; /* Safari and Chrome */
-        }
-
-div.button1:hover       {
-        opacity:1.0;
+        margin-top:-1px;
+        margin-left:-2px;
         }
 
 div.button2     {
@@ -42,17 +37,11 @@ div.button2     {
         top: 324px;
         z-index:1;
         background-color:none;
-        opacity: 0.5;
         text-align:center;
         vertical-align:middle;
         padding-top:0px;
-        transition:opacity .5s;
-        -moz-transition:opacity .5s; /* Firefox 4 */
-        -webkit-transition:opacity .5s; /* Safari and Chrome */
-        }
-
-div.button2:hover       {
-        opacity:1.0;
+        margin-top:-1px;
+        margin-left:-2px;
         }
 
 div.button3     {
@@ -63,18 +52,13 @@ div.button3     {
         top: 324px;
         z-index:1;
         background-color:none;
-        opacity: 0.5;
         text-align:center;
         vertical-align:middle;
         padding-top:0px;
-        transition:opacity .5s;
-        -moz-transition:opacity .5s; /* Firefox 4 */
-        -webkit-transition:opacity .5s; /* Safari and Chrome */
+        margin-top:-1px;
+        margin-left:-2px;
         }
 
-div.button3:hover       {
-        opacity:1.0;
-        }
 
 div.button4     {
         width:181px;
@@ -84,18 +68,13 @@ div.button4     {
         top: 324px;
         z-index:1;
         background-color:none;
-        opacity: 0.5;
         text-align:center;
         vertical-align:middle;
         padding-top:0px;
-        transition:opacity .5s;
-        -moz-transition:opacity .5s; /* Firefox 4 */
-        -webkit-transition:opacity .5s; /* Safari and Chrome */
+        margin-top:-1px;
+        margin-left:-2px;
         }
 
-div.button4:hover       {
-        opacity:1.0;
-        }
 
 div.button5     {
         width:216px;
@@ -105,18 +84,13 @@ div.button5     {
         top: 324px;
         z-index:1;
         background-color:none;
-        opacity: 0.5;
         text-align:center;
         vertical-align:middle;
         padding-top:0px;
-        transition:opacity .5s;
-        -moz-transition:opacity .5s; /* Firefox 4 */
-        -webkit-transition:opacity .5s; /* Safari and Chrome */
+        margin-top:-1px;
+        margin-left:-2px;
         }
 
-div.button5:hover       {
-        opacity:1.0;
-        }
 
 div.button6     {
         width:183px;
@@ -126,18 +100,13 @@ div.button6     {
         top: 324px;
         z-index:1;
         background-color:none;
-        opacity: 0.5;
         text-align:center;
         vertical-align:middle;
         padding-top:0px;
-        transition:opacity .5s;
-        -moz-transition:opacity .5s; /* Firefox 4 */
-        -webkit-transition:opacity .5s; /* Safari and Chrome */
+        margin-top:-1px;
+        margin-left:-2px;
         }
 
-div.button6:hover       {
-        opacity:1.0;
-        }
 
 
 a.buttonlinks   {
